src/grammar-output/bigquery/BigQueryParser.ts
// Generated from src/grammars/bigquery/BigQueryParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { BigQueryParserListener } from "./BigQueryParserListener";

export class BigQueryParser extends Parser {
	public static readonly QUOTE = 1;
	public static readonly DQOUTE = 2;
	public static readonly SQUARE_BRACKET_ID = 3;
	public static readonly BK_QUOTE = 4;
	public static readonly EQUAL = 5;
	public static readonly NOT_EQUAL = 6;
	public static readonly GREATER = 7;
	public static readonly LESS = 8;
	public static readonly LESS_LESS = 9;
	public static readonly GREATER_GREATER = 10;
	public static readonly LEQ = 11;
	public static readonly GEQ = 12;
	public static readonly EXCLAMATION = 13;
	public static readonly PLUS_ASSIGN = 14;
	public static readonly MINUS_ASSIGN = 15;
	public static readonly MULT_ASSIGN = 16;
	public static readonly DIV_ASSIGN = 17;
	public static readonly MOD_ASSIGN = 18;
	public static readonly AND_ASSIGN = 19;
	public static readonly XOR_ASSIGN = 20;
	public static readonly OR_ASSIGN = 21;
	public static readonly DOUBLE_BAR = 22;
	public static readonly DOT = 23;
	public static readonly UNDERLINE = 24;
	public static readonly SHARP = 25;
	public static readonly DOLLAR = 26;
	public static readonly LR_BRACKET = 27;
	public static readonly RR_BRACKET = 28;
	public static readonly LEFT_BRACKET = 29;
	public static readonly RIGHT_BRACKET = 30;
	public static readonly COMMA = 31;
	public static readonly SEMI = 32;
	public static readonly COLON = 33;
	public static readonly STAR = 34;
	public static readonly DIVIDE = 35;
	public static readonly MODULE = 36;
	public static readonly PLUS = 37;
	public static readonly MINUS = 38;
	public static readonly BIT_NOT = 39;
	public static readonly BIT_OR = 40;
	public static readonly BIT_AND = 41;
	public static readonly BIT_XOR = 42;
	public static readonly ALL = 43;
	public static readonly AND = 44;
	public static readonly ANY = 45;
	public static readonly ARRAY = 46;
	public static readonly AS = 47;
	public static readonly ASC = 48;
	public static readonly ASSERT_ROWS_MODIFIED = 49;
	public static readonly AT = 50;
	public static readonly BETWEEN = 51;
	public static readonly BY = 52;
	public static readonly CASE = 53;
	public static readonly CAST = 54;
	public static readonly COLLATE = 55;
	public static readonly CONTAINS = 56;
	public static readonly CREATE = 57;
	public static readonly CROSS = 58;
	public static readonly CUBE = 59;
	public static readonly CURRENT = 60;
	public static readonly DEFAULT = 61;
	public static readonly DEFINE = 62;
	public static readonly DESC = 63;
	public static readonly DISTINCT = 64;
	public static readonly ELSE = 65;
	public static readonly END = 66;
	public static readonly ENUM = 67;
	public static readonly ESCAPE = 68;
	public static readonly EXCEPT = 69;
	public static readonly EXCLUDE = 70;
	public static readonly EXISTS = 71;
	public static readonly EXTRACT = 72;
	public static readonly FALSE = 73;
	public static readonly FETCH = 74;
	public static readonly FOLLOWING = 75;
	public static readonly FOR = 76;
	public static readonly FROM = 77;
	public static readonly FULL = 78;
	public static readonly GROUP = 79;
	public static readonly GROUPING = 80;
	public static readonly GROUPS = 81;
	public static readonly HASH = 82;
	public static readonly HAVING = 83;
	public static readonly IF = 84;
	public static readonly IGNORE = 85;
	public static readonly IN = 86;
	public static readonly INNER = 87;
	public static readonly INTERSECT = 88;
	public static readonly INTERVAL = 89;
	public static readonly INTO = 90;
	public static readonly INT = 91;
	public static readonly FLOAT = 92;
	public static readonly DIGITS = 93;
	public static readonly IS = 94;
	public static readonly JOIN = 95;
	public static readonly LATERAL = 96;
	public static readonly LEFT = 97;
	public static readonly LIKE = 98;
	public static readonly LIMIT = 99;
	public static readonly LOOKUP = 100;
	public static readonly MERGE = 101;
	public static readonly NATURAL = 102;
	public static readonly NEW = 103;
	public static readonly NO = 104;
	public static readonly NOT = 105;
	public static readonly S_NULL = 106;
	public static readonly NULLS = 107;
	public static readonly OF = 108;
	public static readonly OFFSET = 109;
	public static readonly ON = 110;
	public static readonly OR = 111;
	public static readonly ORDER = 112;
	public static readonly ORDINAL = 113;
	public static readonly OUTER = 114;
	public static readonly OVER = 115;
	public static readonly PARTITION = 116;
	public static readonly PRECEDING = 117;
	public static readonly PROTO = 118;
	public static readonly RANGE = 119;
	public static readonly RECURSIVE = 120;
	public static readonly REPLACE = 121;
	public static readonly RESPECT = 122;
	public static readonly RIGHT = 123;
	public static readonly ROLLUP = 124;
	public static readonly ROWS = 125;
	public static readonly SAFE_OFFSET = 126;
	public static readonly SAFE_ORDINAL = 127;
	public static readonly SELECT = 128;
	public static readonly SET = 129;
	public static readonly SOME = 130;
	public static readonly SSTRUCT = 131;
	public static readonly SYSTEM = 132;
	public static readonly TABLESAMPLE = 133;
	public static readonly THEN = 134;
	public static readonly TIME = 135;
	public static readonly TO = 136;
	public static readonly TREAT = 137;
	public static readonly TRUE = 138;
	public static readonly UNBOUNDED = 139;
	public static readonly UNION = 140;
	public static readonly UNNEST = 141;
	public static readonly USING = 142;
	public static readonly WHEN = 143;
	public static readonly WHERE = 144;
	public static readonly WINDOW = 145;
	public static readonly WITH = 146;
	public static readonly WITHIN = 147;
	public static readonly WS = 148;
	public static readonly CMT = 149;
	public static readonly M_CMT = 150;
	public static readonly QUOTED_STRING = 151;
	public static readonly TRIPLE_QUOTED_STRING = 152;
	public static readonly RAW_STRING = 153;
	public static readonly BYTE_STRING = 154;
	public static readonly RAW_BYTE_STRING = 155;
	public static readonly ID = 156;
	public static readonly RB = 157;
	public static readonly RULE_sql = 0;
	public static readonly RULE_query_statement = 1;
	public static readonly RULE_query_expr = 2;
	public static readonly RULE_select_statement = 3;
	public static readonly RULE_from_statement = 4;
	public static readonly RULE_from_item = 5;
	public static readonly RULE_where_statement = 6;
	public static readonly RULE_group_statement = 7;
	public static readonly RULE_having_statement = 8;
	public static readonly RULE_window_statement = 9;
	public static readonly RULE_order_clause = 10;
	public static readonly RULE_limit_clause = 11;
	public static readonly RULE_unary_operator = 12;
	public static readonly RULE_expr = 13;
	public static readonly RULE_cast_expr = 14;
	public static readonly RULE_column_expr = 15;
	public static readonly RULE_except_statement = 16;
	public static readonly RULE_replace_statement = 17;
	public static readonly RULE_join_type = 18;
	public static readonly RULE_on_clause = 19;
	public static readonly RULE_set_op = 20;
	public static readonly RULE_using_clause = 21;
	public static readonly RULE_field_path = 22;
	public static readonly RULE_sstruct = 23;
	public static readonly RULE_array_expr = 24;
	public static readonly RULE_array_path = 25;
	public static readonly RULE_bool_expression = 26;
	public static readonly RULE_window_name = 27;
	public static readonly RULE_window_definition = 28;
	public static readonly RULE_count = 29;
	public static readonly RULE_skip_rows = 30;
	public static readonly RULE_with_statement = 31;
	public static readonly RULE_name = 32;
	public static readonly RULE_alias_name = 33;
	public static readonly RULE_array_name = 34;
	public static readonly RULE_column_name = 35;
	public static readonly RULE_cte_name = 36;
	public static readonly RULE_dataset_name = 37;
	public static readonly RULE_datatype_name = 38;
	public static readonly RULE_function_name = 39;
	public static readonly RULE_join_name = 40;
	public static readonly RULE_member_name = 41;
	public static readonly RULE_project_name = 42;
	public static readonly RULE_struct_name = 43;
	public static readonly RULE_table_name = 44;
	public static readonly RULE_table_expr = 45;
	public static readonly RULE_number = 46;
	public static readonly RULE_integer_type = 47;
	public static readonly RULE_float_type = 48;
	public static readonly RULE_string = 49;
	public static readonly RULE_quoted_string = 50;
	public static readonly RULE_triple_quoted_string = 51;
	public static readonly RULE_raw_string = 52;
	public static readonly RULE_byte_string = 53;
	public static readonly RULE_raw_byte_string = 54;
	public static readonly RULE_special_string = 55;
	public static readonly RULE_keyword = 56;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"sql", "query_statement", "query_expr", "select_statement", "from_statement", 
		"from_item", "where_statement", "group_statement", "having_statement", 
		"window_statement", "order_clause", "limit_clause", "unary_operator", 
		"expr", "cast_expr", "column_expr", "except_statement", "replace_statement", 
		"join_type", "on_clause", "set_op", "using_clause", "field_path", "sstruct", 
		"array_expr", "array_path", "bool_expression", "window_name", "window_definition", 
		"count", "skip_rows", "with_statement", "name", "alias_name", "array_name", 
		"column_name", "cte_name", "dataset_name", "datatype_name", "function_name", 
		"join_name", "member_name", "project_name", "struct_name", "table_name", 
		"table_expr", "number", "integer_type", "float_type", "string", "quoted_string", 
		"triple_quoted_string", "raw_string", "byte_string", "raw_byte_string", 
		"special_string", "keyword",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'''", "'\"'", undefined, "'`'", "'='", undefined, "'>'", "'<'", 
		"'<<'", "'>>'", "'<='", "'>='", "'!'", "'+='", "'-='", "'*='", "'/='", 
		"'%='", "'&='", "'^='", "'|='", "'||'", "'.'", "'_'", "'#'", "'$'", "'('", 
		"')'", "'['", "']'", "','", "';'", "':'", "'*'", "'/'", "'%'", "'+'", 
		"'-'", "'~'", "'|'", "'&'", "'^'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "QUOTE", "DQOUTE", "SQUARE_BRACKET_ID", "BK_QUOTE", "EQUAL", 
		"NOT_EQUAL", "GREATER", "LESS", "LESS_LESS", "GREATER_GREATER", "LEQ", 
		"GEQ", "EXCLAMATION", "PLUS_ASSIGN", "MINUS_ASSIGN", "MULT_ASSIGN", "DIV_ASSIGN", 
		"MOD_ASSIGN", "AND_ASSIGN", "XOR_ASSIGN", "OR_ASSIGN", "DOUBLE_BAR", "DOT", 
		"UNDERLINE", "SHARP", "DOLLAR", "LR_BRACKET", "RR_BRACKET", "LEFT_BRACKET", 
		"RIGHT_BRACKET", "COMMA", "SEMI", "COLON", "STAR", "DIVIDE", "MODULE", 
		"PLUS", "MINUS", "BIT_NOT", "BIT_OR", "BIT_AND", "BIT_XOR", "ALL", "AND", 
		"ANY", "ARRAY", "AS", "ASC", "ASSERT_ROWS_MODIFIED", "AT", "BETWEEN", 
		"BY", "CASE", "CAST", "COLLATE", "CONTAINS", "CREATE", "CROSS", "CUBE", 
		"CURRENT", "DEFAULT", "DEFINE", "DESC", "DISTINCT", "ELSE", "END", "ENUM", 
		"ESCAPE", "EXCEPT", "EXCLUDE", "EXISTS", "EXTRACT", "FALSE", "FETCH", 
		"FOLLOWING", "FOR", "FROM", "FULL", "GROUP", "GROUPING", "GROUPS", "HASH", 
		"HAVING", "IF", "IGNORE", "IN", "INNER", "INTERSECT", "INTERVAL", "INTO", 
		"INT", "FLOAT", "DIGITS", "IS", "JOIN", "LATERAL", "LEFT", "LIKE", "LIMIT", 
		"LOOKUP", "MERGE", "NATURAL", "NEW", "NO", "NOT", "S_NULL", "NULLS", "OF", 
		"OFFSET", "ON", "OR", "ORDER", "ORDINAL", "OUTER", "OVER", "PARTITION", 
		"PRECEDING", "PROTO", "RANGE", "RECURSIVE", "REPLACE", "RESPECT", "RIGHT", 
		"ROLLUP", "ROWS", "SAFE_OFFSET", "SAFE_ORDINAL", "SELECT", "SET", "SOME", 
		"SSTRUCT", "SYSTEM", "TABLESAMPLE", "THEN", "TIME", "TO", "TREAT", "TRUE", 
		"UNBOUNDED", "UNION", "UNNEST", "USING", "WHEN", "WHERE", "WINDOW", "WITH", 
		"WITHIN", "WS", "CMT", "M_CMT", "QUOTED_STRING", "TRIPLE_QUOTED_STRING", 
		"RAW_STRING", "BYTE_STRING", "RAW_BYTE_STRING", "ID", "RB",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(BigQueryParser._LITERAL_NAMES, BigQueryParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return BigQueryParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "BigQueryParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return BigQueryParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return BigQueryParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(BigQueryParser._ATN, this);
	}
	// @RuleVersion(0)
	public sql(): SqlContext {
		let _localctx: SqlContext = new SqlContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, BigQueryParser.RULE_sql);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 114;
			this.query_statement();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public query_statement(): Query_statementContext {
		let _localctx: Query_statementContext = new Query_statementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, BigQueryParser.RULE_query_statement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 117;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === BigQueryParser.WITH) {
				{
				this.state = 116;
				this.with_statement();
				}
			}

			this.state = 119;
			this.query_expr(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public query_expr(): Query_exprContext;
	public query_expr(_p: number): Query_exprContext;
	// @RuleVersion(0)
	public query_expr(_p?: number): Query_exprContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: Query_exprContext = new Query_exprContext(this._ctx, _parentState);
		let _prevctx: Query_exprContext = _localctx;
		let _startState: number = 4;
		this.enterRecursionRule(_localctx, 4, BigQueryParser.RULE_query_expr, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 138;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case BigQueryParser.SELECT:
				{
				this.state = 122;
				this.select_statement();
				this.state = 124;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
				case 1:
					{
					this.state = 123;
					this.order_clause();
					}
					break;
				}
				this.state = 127;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
				case 1:
					{
					this.state = 126;
					this.limit_clause();
					}
					break;
				}
				}
				break;
			case BigQueryParser.LR_BRACKET:
				{
				this.state = 129;
				this.match(BigQueryParser.LR_BRACKET);
				this.state = 130;
				this.query_expr(0);
				this.state = 131;
				this.match(BigQueryParser.RR_BRACKET);
				this.state = 133;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
				case 1:
					{
					this.state = 132;
					this.order_clause();
					}
					break;
				}
				this.state = 136;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
				case 1:
					{
					this.state = 135;
					this.limit_clause();
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 151;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 8, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					{
					_localctx = new Query_exprContext(_parentctx, _parentState);
					this.pushNewRecursionContext(_localctx, _startState, BigQueryParser.RULE_query_expr);
					this.state = 140;
					if (!(this.precpred(this._ctx, 1))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
					}
					this.state = 141;
					this.set_op();
					this.state = 142;
					this.query_expr(0);
					this.state = 144;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
					case 1:
						{
						this.state = 143;
						this.order_clause();
						}
						break;
					}
					this.state = 147;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 7, this._ctx) ) {
					case 1:
						{
						this.state = 146;
						this.limit_clause();
						}
						break;
					}
					}
					}
				}
				this.state = 153;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 8, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public select_statement(): Select_statementContext {
		let _localctx: Select_statementContext = new Select_statementContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, BigQueryParser.RULE_select_statement);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 154;
			this.match(BigQueryParser.SELECT);
			this.state = 156;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				{
				this.state = 155;
				_la = this._input.LA(1);
				if (!(_la === BigQueryParser.ALL || _la === BigQueryParser.DISTINCT)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}
